--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -115,6 +115,11 @@
 .vue2leaflet-map{
   z-index: 0 !important;
 } 
+@media(min-width: 1440px){
+  .banner{
+    padding-top: 40px;
+  }
+}
 @media(max-width: 768px){
   
 }
